--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,15 @@ certifi==2018.1.18
 chardet==3.0.4
 click==6.7
 Flask==0.12.2
+grpcio==1.11.0
 idna==2.6
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
+pkg-resources==0.0.0
+protobuf==3.5.2.post1
 requests==2.18.4
+six==1.11.0
+tornado==5.0.2
 urllib3==1.22
 Werkzeug==0.14.1
