--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 certifi==2018.8.24
 chardet==3.0.4
 click==6.7
+elasticsearch==6.3.1
 Flask==1.0.2
 googleapis-common-protos==1.5.3
 grpcio==1.15.0
@@ -11,7 +12,7 @@ Jinja2==2.10
 MarkupSafe==1.0
 pkg-resources==0.0.0
 protobuf==3.6.1
-requests==2.19.1
+requests==2.20.0
 six==1.11.0
 tornado==5.1.1
 urllib3==1.23
