--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,18 @@
-certifi==2018.8.24
+certifi==2018.10.15
 chardet==3.0.4
-click==6.7
+Click==7.0
 elasticsearch==6.3.1
 Flask==1.0.2
-googleapis-common-protos==1.5.3
-grpcio==1.15.0
-grpcio-tools==1.15.0
+googleapis-common-protos==1.5.5
+grpcio==1.16.1
+grpcio-tools==1.16.1
 idna==2.7
-itsdangerous==0.24
+itsdangerous==1.1.0
 Jinja2==2.10
-MarkupSafe==1.0
-pkg-resources==0.0.0
+MarkupSafe==1.1.0
 protobuf==3.6.1
-requests==2.20.0
+requests==2.20.1
 six==1.11.0
 tornado==5.1.1
-urllib3==1.23
+urllib3==1.24.1
 Werkzeug==0.14.1
