--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,20 @@
-certifi==2018.10.15
+certifi==2019.3.9
 chardet==3.0.4
 Click==7.0
-elasticsearch==6.3.1
+elasticsearch==7.0.0
 Flask==1.0.2
-googleapis-common-protos==1.5.5
-grpcio==1.16.1
-grpcio-tools==1.16.1
-idna==2.7
+googleapis-common-protos==1.5.9
+grpcio==1.20.0
+grpcio-tools==1.20.0
+idna==2.8
 itsdangerous==1.1.0
-Jinja2==2.10
-MarkupSafe==1.1.0
-protobuf==3.6.1
-requests==2.20.1
-six==1.11.0
-tornado==5.1.1
+Jinja2==2.10.1
+MarkupSafe==1.1.1
+pkg-resources==0.0.0
+protobuf==3.7.1
+requests==2.21.0
+six==1.12.0
+snakeviz==2.0.0
+tornado==6.0.2
 urllib3==1.24.1
-Werkzeug==0.14.1
+Werkzeug==0.15.2
