--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,24 @@
-certifi==2019.3.9
+aiohttp==3.5.4
+async-timeout==3.0.1
+attrs==19.1.0
+certifi==2019.6.16
 chardet==3.0.4
 Click==7.0
-elasticsearch==7.0.0
-Flask==1.0.2
-googleapis-common-protos==1.5.10
-grpcio==1.20.1
-grpcio-tools==1.20.1
+elasticsearch==7.0.2
+Flask==1.1.1
+googleapis-common-protos==1.6.0
+grpcio==1.23.0
+grpcio-tools==1.23.0
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
-protobuf==3.7.1
-requests==2.21.0
+multidict==4.5.2
+protobuf==3.9.1
+requests==2.22.0
 six==1.12.0
-snakeviz==2.0.0
-tornado==6.0.2
-urllib3==1.25.2
-Werkzeug==0.15.2
+snakeviz==2.0.1
+tornado==6.0.3
+urllib3==1.25.3
+Werkzeug==0.15.5
+yarl==1.3.0
