updated dial out

--- a/rtnm/test1.conf
+++ b/rtnm/test1.conf
@@ -1,13 +1,5 @@
 {
     "routers": [{
-	"router-name": "5508-JJ8-06",
-	"Address": "10.8.99.16",
-	"Username": "root",
-	"Password": "lablab",
-	"PemFile": "5508-JJ8-06.pem",
-	"TLS": "True",
-	"Port": 57400
-    }, {
 	"router-name": "5502SE-JJ8-05",
 	"Address": "10.8.99.5",
 	"Username": "root",
@@ -16,13 +8,10 @@
     }],
     "cisco-dial-out": [{
          "Port": 5555,
-	 "Address": "0.0.0.0"
+	 "Address": "None"
     }],	    
     "cisco-dial-in": [{
-	"router-name": "5508-JJ8-06",
-	"Subscriptions": ["NPU", "CPU"]
-    }, {
-	"router-name": "ALL",
+   	"router-name": "ALL",
 	"Subscriptions": ["LLDP"]
     }],
     "gnmi": [{
@@ -34,6 +23,6 @@
 	"router-name": "ALL",
 	"ES-Port": 9200,
 	"DatabaseIP": ["2.2.2.1"],
-	"BatchSize": 10
+	"BatchSize": 25
     }]
 }
