--- a/requirements.txt
+++ b/requirements.txt
@@ -6,19 +6,23 @@ chardet==3.0.4
 click==7.1.2
 Flask==1.1.2
 googleapis-common-protos==1.52.0
-grpcio==1.30.0
-grpcio-tools==1.30.0
+grpcio==1.31.0
+grpcio-tools==1.31.0
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
 multidict==4.7.6
+mypy==0.782
+mypy-extensions==0.4.3
 pkg-resources==0.0.0
-protobuf==3.12.2
+protobuf==3.12.4
 requests==2.24.0
 six==1.15.0
 snakeviz==2.1.0
 tornado==6.0.4
-urllib3==1.25.9
+typed-ast==1.4.1
+typing-extensions==3.7.4.2
+urllib3==1.25.10
 Werkzeug==1.0.1
-yarl==1.4.2
+yarl==1.5.1
