--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,30 @@
-aiohttp==3.7.4
+aiohttp==3.7.4.post0
 async-timeout==3.0.1
 attrs==20.3.0
 certifi==2020.12.5
-chardet==3.0.4
+chardet==4.0.0
 click==7.1.2
 cycler==0.10.0
 Dozer==0.8
 Flask==1.1.2
 googleapis-common-protos==1.53.0
-grpcio==1.35.0
-grpcio-tools==1.35.0
+grpcio==1.37.1
+grpcio-tools==1.37.1
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.3
 kiwisolver==1.3.1
 Mako==1.1.4
 MarkupSafe==1.1.1
-matplotlib==3.3.4
+matplotlib==3.4.1
 memory-profiler==0.58.0
 multidict==5.1.0
 mypy==0.812
 mypy-extensions==0.4.3
-numpy==1.20.1
-Pillow==8.1.0
+numpy==1.20.2
+Pillow==8.2.0
 pkg-resources==0.0.0
-protobuf==3.15.3
+protobuf==3.15.8
 psutil==5.8.0
 pyparsing==2.4.7
 pyrasite==2.0
@@ -33,9 +33,9 @@ requests==2.25.1
 six==1.15.0
 snakeviz==2.1.0
 tornado==6.1
-typed-ast==1.4.2
+typed-ast==1.4.3
 typing-extensions==3.7.4.3
-urllib3==1.26.3
+urllib3==1.26.4
 WebOb==1.8.7
 Werkzeug==1.0.1
 yarl==1.6.3
