--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-certifi==2021.5.30
+certifi==2021.10.8
 chardet==4.0.0
+charset-normalizer==2.0.7
 googleapis-common-protos==1.53.0
-grpcio==1.38.0
-grpcio-tools==1.38.0
-idna==2.10
-protobuf==3.17.3
-requests==2.25.1
+grpcio==1.41.1
+grpcio-tools==1.41.1
+idna==3.3
+pkg_resources==0.0.0
+protobuf==3.19.1
+requests==2.26.0
 six==1.16.0
-urllib3==1.26.5
+tornado==6.1
+urllib3==1.26.7
